feat(observations): add category support with local seeding and UI display

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -104,6 +104,13 @@ input[type="datetime-local"] {
   -webkit-appearance: none;
 }
 
+input:focus,
+textarea:focus,
+select:focus {
+  outline: none;
+  border-color: #111;
+}
+
 /* ===== Card ===== */
 
 .card {
